crates/keron-lang/tests/corpus/errors/parse/unclosed_interpolation.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: unexpected `"`, expected expression
  --> 1:9
  |
1 | val a = "x = ${1 + 2"
  |         ^
  = help: write an expression (literal, name, call, or `(…)`).
